--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <ul class="nav_ul">
         <li class="top-guys">
             <a href=""><img src="/assets/flag.png" alt=""></a>
-            <a href=""><h3>RADIO</h3></a>
+            <a href=""><h3>RADIOo</h3></a>
            
         </li>
         <li class="top-guys">
