--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/radio.css">
+    <link rel="stylesheet" href="/HTML/styles/radio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body >
@@ -14,7 +14,7 @@
      <ul class="nav_ul">
         <li class="top-guys">
             <a href=""><img src="/assets/flag.png" alt=""></a>
-            <a href=""><h3>RADIOo</h3></a>
+            <a href=""><h3>RADIO</h3></a>
            
         </li>
         <li class="top-guys">
